--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ requests==2.31.0
 python-dotenv==1.0.1
 Pillow==10.2.0
 python-magic==0.4.27 
-streamlit==1.27.0
-streamlit-drawable-canvas==0.9.3
+streamlit
+streamlit-drawable-canvas
 
