--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-requests==2.31.0
-python-dotenv==1.0.1
-Pillow==10.2.0
-python-magic==0.4.27 
-streamlit
-streamlit-drawable-canvas
-
+streamlit==1.27.0
+streamlit-drawable-canvas==0.9.3
+numpy==1.26.4
+protobuf==4.25.3
+packaging==23.2
+tenacity==8.2.3
+rich==13.9.4
